# guilin-zipai

./: Cargo.toml  README.md  README_LATEST.md  RUN_DEMO.ps1  STARTUP.md  Trunk.toml  build_errors.txt  deep-research-report.md  run.bat  run.sh
crates/client/: Cargo.toml  index.html
crates/client/src/: lib.rs  main.rs  models.rs  state.rs
crates/client/src/components/: card.rs  game.rs  hand.rs  mod.rs  player.rs
crates/client/src/pages/: game.rs  home.rs  mod.rs  room.rs
crates/client/src/services/: game.rs  mod.rs  websocket.rs
crates/core/: Cargo.toml
crates/core/src/: card.rs  constants.rs  deck.rs  error.rs  game.rs  hand.rs  lib.rs  meld.rs  player.rs
crates/economy/: Cargo.toml
crates/economy/src/: currency.rs  lib.rs  ranking.rs  settlement.rs
crates/server/: Cargo.toml
crates/server/src/: anti_cheat.rs  bot.rs  handler.rs  lib.rs  main.rs  message.rs  room.rs  server.rs  tests.rs
crates/skills/: Cargo.toml
crates/skills/src/: effect.rs  lib.rs  skills.rs  trigger.rs
static/: index.html
test_ui/: package-lock.json  package.json  test.js  test_ws.js
