[workspace]
members = [
    "crates/core",
    "crates/server",
    "crates/client",
    "crates/skills",
    "crates/economy",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Guilin Paizi Team"]
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# 核心依赖
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }

# 游戏相关
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"

# WebSocket
tokio-tungstenite = "0.21"
futures = "0.3"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 测试
tokio-test = "0.4"

# Yew (前端)
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
gloo = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
