[package]
name = "guilin-paizi-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "桂林字牌游戏服务器"

[dependencies]
guilin-paizi-core = { path = "../core" }
guilin-paizi-skills = { path = "../skills" }
guilin-paizi-economy = { path = "../economy" }

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio-test.workspace = true
